<resources>
    <string name="app_name">Tymer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="hour">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="zero">0</string>
    <string name="missing_input">Please enter a value for at least one fields</string>
    <string name="input_negative">Please enter a positive value for all fields</string>
    <string name="seconds_over_60">Please enter a value for seconds less than 60</string>
    <string name="minutes_over_60">Please enter a value for minutes less than 60</string>
    <string name="hours_over_24">Please enter a value for hours less than 24</string>
    <string name="modebtn">Dark</string>
    <string name="create_preset">Create Preset</string>
    <string name="create">Create</string>
    <string name="presets">Presets</string>
    <string name="select">Select</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="connection_error">Network Error</string>
    <string name="creator">nabeeladzan</string>
    <string name="created_by">Created by</string>
    <string name="description">" I developed the \"Tymer\" timer app for a college assignment. It's a user-friendly timer application that allows users to create and manage timers for different activities. Users can set the duration for each timer and assign names to them. The app helps users stay organized and on track with their tasks."</string>
</resources>