<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.timer.FragmentTimer">

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/reset"
        android:textColor="@color/slategray"
        android:textSize="34sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonMain" />

    <Button
        android:id="@+id/buttonMain"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/start"
        android:textColor="@color/teal_200"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonReset"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="141dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name"
        android:textColor="@color/teal_200"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />


    <TextView
        android:id="@+id/textViewSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/seconds"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputSecond"
        app:layout_constraintStart_toEndOf="@+id/inputSecond"
        app:layout_constraintTop_toTopOf="@+id/inputSecond"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/textViewMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/minutes"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputMinute"
        app:layout_constraintStart_toEndOf="@+id/inputMinute"
        app:layout_constraintTop_toTopOf="@+id/inputMinute" />

    <TextView
        android:id="@+id/textViewHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/hour"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputHour"
        app:layout_constraintStart_toEndOf="@+id/inputHour"
        app:layout_constraintTop_toTopOf="@+id/inputHour" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputHour"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/zero"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputMinute"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/zero"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/inputHour"
        app:layout_constraintTop_toBottomOf="@+id/inputHour" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputSecond"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/zero"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/inputMinute"
        app:layout_constraintTop_toBottomOf="@+id/inputMinute" />

    <TextView
        android:id="@+id/textViewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:fontFamily="@font/roboto"
        android:textSize="56sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        tools:text="@tools:sample/date/hhmmss" />

    <Button
        android:id="@+id/buttonTheme"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/modebtn"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>